== 0.5.0

* Major Enhancements
  * Implement lifecycle scoped metric to allow for cross-state conditions
  * Add TriggerCondition for conditions that need info about state changes
  * Implement notification system
* Minor Enchancements
  * Allow EventConditions to do transition overloading
  * Report errors during god startup instead of failing silently
* New Conditions
  * Flapping < TriggerCondition - trigger on state change
* New Contacts
  * Email < Contact - notify via email (smtp, sendmail)
* Bug Fixes
  * Fix abort not aborting problem
  * Fix -p option not working for god binary

== 0.4.3 / 2007-09-10
* Bug Fixes
  * fix Process#alive? to not raise on no such file (affects `god terminate`)

== 0.4.2 / 2007-09-10
* Bug Fixes
  * fix netlink buffer issue that prevented events on Linux from working consistently [dkresge]

== 0.4.1 / 2007-09-10
* Bug Fixes
  * require 'stringio' for ruby 1.8.5

== 0.4.0 / 2007-09-10

* Major Enhancements
  * Add the ability for conditions to override transition state (for exceptional cases)
  * Implement dynamic load of config files while god is running (god load <filename>)
  * Add ability to save auto-daemonized process output to a log file
  * Add robust default stop lambda command for auto-daemonized processes (inspired by _eric)
  * Add status command for god binary (shows status of each watch)
  * Create proper logger with timestamps
  * Add log command to god binary to get real time logs for a specific watch from a running god instance
  * Add terminate command for god binary (stop god and all watches)
* Minor Enhancements
  * Enforce validity of Watches
  * Enforce that God.init is not called after a Watch
  * Move pid_file_directory creation and validation to God.start
  * Remove check for at least one Watch during startup (now that dynamic loading exists)
* New Conditions
  * Tries < PollCondition - triggers after the specified number of tries